# Calculator

./: Makefile  README.md
src/: CMakeLists.txt  DVI.html  main.cpp
src/Controllers/: CMakeLists.txt  SimpleCalcController.cpp  SimpleCalcController.h  Validator.h
src/Models/: CMakeLists.txt  SimpleCalcModel.cpp  SimpleCalcModel.h
src/Services/: CMakeLists.txt  Calculate.cpp  Calculate.h  main.cpp
src/Services/CalculatorCore/: CMakeLists.txt  core.c  core.h
src/Services/CalculatorCore/InternalCore/: CMakeLists.txt  calculator.c  calculator.h  checks.c  functions.c  stack.c  test
src/Tests/: test.c
src/Views/: CMakeLists.txt  main.qml  qmlSources.qrc
src/Views/Calculator/: CalcInput.qml  ScientificKeyboard.qml  SimpleCalc.qml  qmldir
src/Views/Charts/: Chart.qml  Graph.qml  GraphInput.qml  GraphPage.qml  qmldir
src/Views/CustomComponents/: BaseButton.qml  DefaultButton.qml  MaterialInput.qml  OperationButton.qml  ScientificButton.qml  Style.qml  qmldir
src/Views/JavaScriptFunctions/: Chart.js
